plugins {
    id 'java'
    id 'application'
    id 'com.google.cloud.tools.jib'
}

mainClassName = 'com.strapdata.strapkop.Application'

jar {
    manifest {
        attributes "Main-Class": mainClassName
    }

    zip64=true
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

jib {
    from {
        image = 'openjdk:alpine'
    }
    to {
        image = dockerImagePrefix + dockerImageSuffix + "/elassandra-operator"
        tags = [ version, project.gitCommitHash, 'latest']
        // osxkeychain does not work on linux and CI environments
        // credHelper = 'osxkeychain'

        auth {
            username = registryUsername
            password = registryPassword
        }
    }
    container {
        jvmFlags = ['-Xmx1024m',
                    '-XX:+UnlockExperimentalVMOptions', '-XX:+UseCGroupMemoryLimitForHeap', '-XX:MaxRAMFraction=2',
                    '-XX:+ExitOnOutOfMemoryError',
                    operatorEnableDebug.toBoolean() ? ('-agentlib:jdwp=transport=dt_socket,server=y,suspend='+(project.operatorDebugSuspend.toBoolean() ? "y" : "n")+',address=' + project.operatorDebugPort) : ""
        ]
        mainClass = mainClassName
        ports = ['8080']
        labels = [ description:'Strapkop Elassandra operator for K8S']
    }
}
tasks.jibDockerBuild.dependsOn project(':java:backup').jar
tasks.jibDockerBuild.dependsOn project(':java:model').jar

compileJava {
    sourceCompatibility = 8
    targetCompatibility = 8
    options.encoding = 'UTF-8'
    options.compilerArgs = [ '-parameters', '-Xlint:all', '-Xlint:-processing', '-Xlint:-serial', '-Werror']
}

dependencies {
    compile 'org.projectlombok:lombok:1.18.4'
    annotationProcessor "org.projectlombok:lombok:1.18.4"

    annotationProcessor "io.micronaut:micronaut-security"
    annotationProcessor "io.micronaut:micronaut-inject-java"
    annotationProcessor "io.micronaut:micronaut-validation"
    annotationProcessor "io.micronaut.configuration:micronaut-openapi"

    compile "com.xebia:jackson-lombok:1.1"

    compile "io.micronaut:micronaut-security-session"
    compile "io.micronaut:micronaut-http-client"
    compile "io.micronaut:micronaut-http-server-netty"
    compile "io.micronaut:micronaut-inject"
    compile "io.micronaut:micronaut-inject-java"
    compile "io.micronaut:micronaut-validation"
    compile "io.micronaut:micronaut-runtime"
    compile "io.micronaut:micronaut-views"
    compile "io.micronaut:micronaut-multitenancy"
    compile "io.micronaut:micronaut-management"
    compile "io.micronaut.configuration:micronaut-cassandra"

    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
    compile "javax.annotation:javax.annotation-api"

    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
    compile "io.swagger.core.v3:swagger-annotations"

    compile "com.github.akarnokd:rxjava2-interop:0.13.5"

    compile "io.micronaut:micronaut-security-jwt"

    compile "io.kubernetes:client-java:4.0.0"
    compile "javax.inject:javax.inject:1"
    runtime "ch.qos.logback:logback-classic:1.2.3"

    compile project(':java:model')
    compile project(':java:backup')
}
